--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,6 @@ nav>ul>li>a:hover {
 .mostrarReciente {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 20px;
     gap: 30px;  /*nuevo*/
 }
@@ -152,6 +151,11 @@ nav>ul>li>a:hover {
 
 .contenido>h3:hover{
    text-decoration: underline; /*nuevo*/
+}
+
+.ir {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
 }
 
 footer {
@@ -228,6 +232,18 @@ footer {
 
 /* RES TABLET  */
 @media only screen and (min-width: 900px) {
+    h3 {
+        font-size: 25px;
+    }
+
+    .contenido h3{
+        margin: 0px;
+    }
+
+    .contenido p {
+        font-size: 13px;
+    }
+
     .busqueda {
         min-width: 90%;
         max-width: 50%;
@@ -277,6 +293,10 @@ footer {
 /* RES PC  */
 
 @media only screen and (min-width: 1280px) {
+    .contenido h3{
+        margin-bottom: 15px;
+    }
+
     .busqueda {
         min-width: 50%;
     }
