--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     text-align: justify;
 }
 
+a {
+    color: black;
+}
+
 body {
     background-color: #f5f5f5;
     margin-top: 100px;
@@ -149,8 +153,9 @@ nav>ul>li>a:hover {
     box-shadow: 1px 0 10px  rgba(0, 0, 0, 0.463); /*nuevo*/
 }
 
-.contenido>h3:hover{
+.contenido>h3>a:hover{
    text-decoration: underline; /*nuevo*/
+   color: rgb(75, 71, 71)
 }
 
 .ir {
