--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,8 @@ h2 {
 }
 
 h3 {
-    font-size: 25px; /*nuevo*/
+    font-size: 25px;
+    /*nuevo*/
 }
 
 nav>ul>li>a:hover {
@@ -143,25 +144,53 @@ nav>ul>li>a:hover {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    gap: 30px;  /*nuevo*/
+    gap: 0px;
+    /*nuevo*/
 }
 
-.mostrarReciente img{
+.mostrarReciente img {
     width: 150px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 1px 0 10px  rgba(0, 0, 0, 0.463); /*nuevo*/
+    box-shadow: 1px 0 10px rgba(0, 0, 0, 0.463);
+    /*nuevo*/
 }
 
-.contenido>h3>a:hover{
-   text-decoration: underline; /*nuevo*/
-   color: rgb(75, 71, 71)
+.contenido {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.contenido>h3>a:hover {
+    text-decoration: underline;
+    /*nuevo*/
+    color: rgb(75, 71, 71)
 }
 
 .ir {
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #ffebdb;
+    font-weight: 600;
 }
+
+.ir:hover {
+    background-color: #ffc799;
+}
+
+.contenido>h3 {
+    margin: 0px;
+}
+
+.contenido>p,
+.contenido>button {
+    font-size: 13px;
+}
+
+/** */
 
 footer {
     background-color: #333;
@@ -197,9 +226,9 @@ footer {
     background-color: #ffebdb;
 }
 
-.recientes>a>article>img {
-    height: 100px;
-    width: auto;
+.mostrarReciente>img {
+    width: 200px;
+    height: auto;
     margin-right: 10px;
 }
 
@@ -235,13 +264,31 @@ footer {
     width: 100%;
 }
 
+
+
 /* RES TABLET  */
 @media only screen and (min-width: 900px) {
+
+
+    .mostrarReciente {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        gap: 20px;/*nuevo*/
+    }
+
+    .recientes {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 20px;
+        gap: 60px;
+    }
+
     h3 {
         font-size: 25px;
     }
 
-    .contenido h3{
+    .contenido h3 {
         margin: 0px;
     }
 
@@ -298,7 +345,13 @@ footer {
 /* RES PC  */
 
 @media only screen and (min-width: 1280px) {
-    .contenido h3{
+
+    .contenido>p,
+    .contenido>button {
+        font-size: 18px;
+    }
+
+    .contenido h3 {
         margin-bottom: 15px;
     }
 
