--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,9 @@ nav>ul>li>a:hover {
     font-size: 13px;
 }
 
-/** */
+.Location>a:hover {
+    color: darkred;
+}
 
 footer {
     background-color: #333;
@@ -228,22 +230,45 @@ footer {
     height: 125px;
     width: auto;
     margin-right: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
 }
 
 .anuncio {
     display: flex;
     padding: 10px;
+    gap: 20px;
 }
 
 .anuncio:hover {
-    background-color: #ffebdb;
+    background-color: rgba(158, 158, 158, 0.151);
+    border-radius: 30px;
+    filter: blur(0.7px);
+}
+
+.contenido {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.boton-contenedor {
+    margin-left: auto;
+    margin-right: 20%;
+    display: flex;
+    height: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    align-items: center;
+    /* Centra el botón verticalmente */
+    height: 50%;
+    /* Establece la altura del contenedor al 40% del contenedor padre */
 }
 
 .disponibilidad {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    font-size: 10px;
+    padding: 20%;
+    text-align: center;
+    border-radius: 20px;
 }
 
 footer {
@@ -262,7 +287,8 @@ footer {
         display: flex;
         justify-content: center;
         margin-top: 20px;
-        gap: 20px;/*nuevo*/
+        gap: 20px;
+        /*nuevo*/
     }
 
     .recientes {
