--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ h2 {
 }
 
 h3 {
-    font-size: 25px;
+    font-size: 18px;
     /*nuevo*/
 }
 
@@ -82,6 +82,12 @@ nav>ul>li>a:hover {
     width: 90%;
     max-width: 90%;
     min-width: 90%;
+}
+
+.anuncioTitle {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .busqueda label,
@@ -180,6 +186,7 @@ nav>ul>li>a:hover {
 .contenido>p,
 .contenido>button {
     font-size: 13px;
+    margin-top: 5px;
 }
 
 .Location>a:hover {
@@ -243,7 +250,7 @@ footer {
 .anuncio:hover {
     background-color: rgba(158, 158, 158, 0.151);
     border-radius: 30px;
-    filter: blur(0.7px);
+    box-shadow: 1px 0 10px rgba(158, 158, 158, 0.151);
 }
 
 .contenido {
@@ -254,7 +261,6 @@ footer {
 
 .boton-contenedor {
     margin-left: auto;
-    margin-right: 20%;
     display: flex;
     height: auto;
     margin-top: auto;
@@ -269,13 +275,17 @@ footer {
     padding: 20%;
     text-align: center;
     border-radius: 20px;
+    background-color: #ffa962;
+}
+
+section {
+    margin-bottom: 20px;
 }
 
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -289,6 +299,11 @@ footer {
         margin-top: 20px;
         gap: 20px;
         /*nuevo*/
+    }
+
+    .anuncioTitle {
+        display: flex;
+        flex-direction: row;
     }
 
     .recientes {
@@ -306,8 +321,10 @@ footer {
         margin: 0px;
     }
 
-    .contenido p {
+    .contenido>p,
+    .contenido>button {
         font-size: 13px;
+        margin-top: 20px;
     }
 
     .busqueda {
@@ -353,6 +370,11 @@ footer {
         font-size: 15px;
     }
 
+    .boton-contenedor {
+        margin-right: 10%;
+
+    }
+
 }
 
 
@@ -360,9 +382,15 @@ footer {
 
 @media only screen and (min-width: 1280px) {
 
+    .boton-contenedor {
+        margin-right: 20%;
+
+    }
+
     .contenido>p,
     .contenido>button {
         font-size: 18px;
+        margin-top: 30px;
     }
 
     .contenido h3 {
@@ -422,8 +450,10 @@ footer {
     }
 
     .disponibilidad:hover {
-        background-color: #ffc799;
-        color: darkred;
+        font-weight: bold;
+        box-shadow: 1px 0 10px rgba(0, 0, 0, 0.463);
+        font-size: 22px;
+        transition: all 0.2s ease;
     }
 
 }
