--- a/css/mostrarcasa.css
+++ b/css/mostrarcasa.css
@@ -48,6 +48,10 @@ nav > ul > li > a > span {
     display: none;
 }
 
+img{
+    border-radius: 10px;
+}
+
 footer {
     background-color: #333;
     color: #fff;
@@ -67,19 +71,20 @@ h2 {
     background-color: #ffebdb;
 }
 
+/*nuevo*/
 img {
     width: 80%;
     height: auto;
+    box-shadow: 1px 0 10px rgba(0, 0, 0, 0.334);
 }
-
 
 .efecto {
     transition: transform 0.2s ease;
 }
-.efecto:hover {
-    transform: rotate(5deg);
-}
 
+.efecto:hover {
+    transform: scale(1.1); /*nuevo*/
+}
 
 .contenido {
     width: 80%;
@@ -92,11 +97,12 @@ img {
     display: flex;
     gap: 10px;
     margin: auto;
+    margin-top: 10px; /*nuevo*/
     width: 80%;
 }
 
 .minimgs > img {
-    width: 20%;
+    width: 30%; 
     height: auto;
 }
 
@@ -106,25 +112,33 @@ img {
 }
 
 .prestacionesCasa {
+    margin: 30px auto 10px auto;
+    width: 100%;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 20px;
+    box-shadow: 1px 0 10px rgba(0, 0, 0, 0.334); /*nuevo*/
 }
 
 .prestacionesCasa h3 {
     color: #333;
     font-size: 1.5em;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .prestacionesCasa ul {
     list-style-type: none;
     padding: 0;
+    width: 90%;
+    margin: 0 auto 0 auto;
+    gap: 10px;
 }
 
 .prestacionesCasa li {
+    text-align: center;
     margin-bottom: 10px;
     line-height: 1.6;
 }
@@ -137,20 +151,21 @@ img {
 .precio {
     font-size: 24px;
     color: #333;
-    margin-top: 10px;
+    margin-top: 20px;
+    text-align: center;
 }
 
 .contacto {
     width: 90%;
-    margin: auto;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 20px;
-    margin-top: 20px;
+    margin: 20px auto 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 1px 0 10px rgba(0, 0, 0, 0.24); /*nuevo*/
 }
 
 .contacto h3 {
@@ -208,6 +223,29 @@ img {
 
     .precio {
         font-size: 20px;
+    }
+
+    /*nuevo*/
+    .minimgs {
+        gap: 20px;
+        margin-top: 20px; 
+    }
+
+    .prestacionesCasa ul {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+    .prestacionesCasa li {
+        border: 1px solid #4cb04f80;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    
+    .prestacionesCasa li:hover{
+        box-shadow: 1px 0 10px #4cb04f;
+        border-color: transparent;
+        transition: all 0.2s ease;
     }
 }
 
