--- a/css/mostrarcasa.css
+++ b/css/mostrarcasa.css
@@ -61,13 +61,14 @@ footer {
 }
 
 h2 {
+    margin: 0 0 10px 0;
     font-size: 30px;
     text-align: center;
 }
 
 .superior {
     width: 100%;
-    height: 150px;
+    height: 200px;
     background-color: #ffebdb;
 }
 
@@ -113,7 +114,7 @@ img {
 
 .prestacionesCasa {
     margin: 30px auto 10px auto;
-    width: 100%;
+    width: 90%;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
     border-radius: 10px;
